[high-level] Added inverseDynamics method to DynamicsComputations class
Added an inverseDynamics method (currently without external forces) to the
DynamicsComputations class. With this method the DynamicsComputation class
is more and less in feature parity with the old DynTree class, excluding
the "estimation" part of the class that have been already moved to the
TorqueEstimation class, and will be moved to a new yarp-indipendent
class in the future .

--- a/high-level/tests/CMakeLists.txt
+++ b/high-level/tests/CMakeLists.txt
@@ -20,7 +20,7 @@ macro(add_unit_test_hl_yarp classname)
 endmacro()
 
 # todo
-#add_unit_test_hl(DynamicsComputations)
+add_unit_test_hl(DynamicsComputations)
 
 #
 add_unit_test_hl_yarp(DynamicsComputationsDynTreeConsistency)
