Accelerometer, Gyroscopes and IMeasurement added

--- a/sensors/CMakeLists.txt
+++ b/sensors/CMakeLists.txt
@@ -22,7 +22,7 @@ set(IDYNTREE_SENSORS_HEADERS include/iDynTree/Sensors/Sensors.hpp
                              include/iDynTree/Sensors/SixAxisFTSensor.hpp
                              include/iDynTree/Sensors/Gyroscope.hpp
                              include/iDynTree/Sensors/Accelerometer.hpp
-                             include/iDynTree/Sensors/iMeasurement.hpp)
+                             include/iDynTree/Sensors/IMeasurement.hpp)
 
 #file (GLOB IDYNTREE_BASE_PRIVATE_INCLUDES)
 
@@ -30,7 +30,7 @@ set(IDYNTREE_SENSORS_SOURCES src/Sensors.cpp
                              src/SixAxisFTSensor.cpp
                              src/Accelerometer.cpp
                              src/Gyroscope.cpp
-                             src/iMeasurement.cpp)
+                             src/IMeasurement.cpp)
                              
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_SENSORS_SOURCES})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_SENSORS_HEADERS})
