--- a/tests/data/testModels.h.in
+++ b/tests/data/testModels.h.in
@@ -15,9 +15,11 @@ const char *IDYNTREE_TESTS_URDFS[] = {"oneLink.urdf",
                                       "icub.urdf",
                                       "icub_model.urdf",
                                       "icub_skin_frames.urdf",
-                                      "bigman.urdf"};
+                                      "bigman.urdf",
+                                      "robotModelTestTwoLinks.urdf"
+};
 
-const unsigned int IDYNTREE_TESTS_URDFS_NR = 7;
+const unsigned int IDYNTREE_TESTS_URDFS_NR = 8;
 
 inline std::string getAbsModelPath(std::string modelName)
 {
