--- a/tests/data/testModels.h.in
+++ b/tests/data/testModels.h.in
@@ -11,6 +11,7 @@
 // IDYNTREE_TESTS_URDFS CMake list
 const char *IDYNTREE_TESTS_URDFS[] = {"oneLink.urdf",
                                       "twoLinks.urdf",
+                                      "twoLinksFixed.urdf",
                                       "icubTwoLinks.urdf",
                                       "icub.urdf",
                                       "icub_model.urdf",
@@ -20,7 +21,7 @@ const char *IDYNTREE_TESTS_URDFS[] = {"oneLink.urdf",
                                       "icub2BB5Sea.urdf"
 };
 
-const unsigned int IDYNTREE_TESTS_URDFS_NR = 9;
+const unsigned int IDYNTREE_TESTS_URDFS_NR = 10;
 
 inline std::string getAbsModelPath(std::string modelName)
 {
