Added first version of ForwardKinematics loop using the new data structures
* Added ForwardKinematics for all the joints
* Added consistency test with old ForwardKinematics based on KDL

--- a/model/CMakeLists.txt
+++ b/model/CMakeLists.txt
@@ -5,6 +5,8 @@
 project(iDynTree_Model CXX)
 
 set(IDYNTREE_MODEL_HEADERS include/iDynTree/Model/FixedJoint.h
+                           include/iDynTree/Model/ForwardKinematics.h
+                           include/iDynTree/Model/FreeFloatingState.h
                            include/iDynTree/Model/IJoint.h
                            include/iDynTree/Model/IJointStateInterfaces.h
                            include/iDynTree/Model/Indeces.h
@@ -18,9 +20,12 @@ set(IDYNTREE_MODEL_HEADERS include/iDynTree/Model/FixedJoint.h
 set(IDYNTREE_MODEL_PRIVATE_INCLUDES)
 
 set(IDYNTREE_MODEL_SOURCES src/FixedJoint.cpp
+                           src/ForwardKinematics.cpp
+                           src/FreeFloatingState.cpp
                            src/Indeces.cpp
                            src/Link.cpp
                            src/LinkState.cpp
+                           src/JointState.cpp
                            src/Model.cpp
                            src/ModelInterfaceDestructors.cpp
                            src/RevoluteJoint.cpp
