Added backward phase (dynamics) phase of RNEA
Together with the forward phase for the propagation of
velocities and accelerations, this two function permits
to implement the complete RNEA algorithm for free floating
robots.

--- a/model/CMakeLists.txt
+++ b/model/CMakeLists.txt
@@ -9,6 +9,7 @@ set(IDYNTREE_MODEL_HEADERS include/iDynTree/Model/FixedJoint.h
                            include/iDynTree/Model/FreeFloatingState.h
                            include/iDynTree/Model/IJoint.h
                            include/iDynTree/Model/IJointStateInterfaces.h
+                           include/iDynTree/Model/InverseDynamics.h
                            include/iDynTree/Model/Indeces.h
                            include/iDynTree/Model/Link.h
                            include/iDynTree/Model/LinkState.h
@@ -23,6 +24,7 @@ set(IDYNTREE_MODEL_SOURCES src/FixedJoint.cpp
                            src/ForwardKinematics.cpp
                            src/FreeFloatingState.cpp
                            src/Indeces.cpp
+                           src/InverseDynamics.cpp
                            src/Link.cpp
                            src/LinkState.cpp
                            src/JointState.cpp
