Implemented CRBA using pure iDynTree functions
For now just supporting 0 and 1 dof joints, and
the implementation is still a bit obscure.

Consistency test with old implementation added and working.

--- a/model/CMakeLists.txt
+++ b/model/CMakeLists.txt
@@ -7,6 +7,7 @@ project(iDynTree_Model CXX)
 set(IDYNTREE_MODEL_HEADERS include/iDynTree/Model/FixedJoint.h
                            include/iDynTree/Model/ForwardKinematics.h
                            include/iDynTree/Model/FreeFloatingState.h
+                           include/iDynTree/Model/FreeFloatingMassMatrix.h
                            include/iDynTree/Model/IJoint.h
                            include/iDynTree/Model/IJointStateInterfaces.h
                            include/iDynTree/Model/InverseDynamics.h
@@ -23,6 +24,7 @@ set(IDYNTREE_MODEL_PRIVATE_INCLUDES)
 set(IDYNTREE_MODEL_SOURCES src/FixedJoint.cpp
                            src/ForwardKinematics.cpp
                            src/FreeFloatingState.cpp
+                           src/FreeFloatingMassMatrix.cpp
                            src/Indeces.cpp
                            src/InverseDynamics.cpp
                            src/Link.cpp
