--- a/tests/data/CMakeLists.txt
+++ b/tests/data/CMakeLists.txt
@@ -10,6 +10,7 @@ set(IDYNTREE_TESTS_URDFS icub.urdf
                          icub_skin_frames.urdf
                          bigman.urdf
                          twoLinks.urdf
+                         threeLinks.urdf
                          twoLinksFixed.urdf
                          oneLink.urdf
                          icubTwoLinks.urdf
