--- a/core-experimental/tests/CMakeLists.txt
+++ b/core-experimental/tests/CMakeLists.txt
@@ -17,6 +17,7 @@ add_unit_test(Direction)
 add_unit_test(PrivateUtils)
 add_unit_test(SpatialAcc)
 add_unit_test(SpatialInertia)
+add_unit_test(ArticulatedBodyInertia)
 add_unit_test(Twist)
 add_unit_test(Wrench)
 add_unit_test(ExpLog)
