bug fix on new sensor instantiation

--- a/model_io/urdf/tests/CMakeLists.txt
+++ b/model_io/urdf/tests/CMakeLists.txt
@@ -9,3 +9,4 @@ macro(add_modelio_urdf_unit_test classname)
 endmacro()
 
 add_modelio_urdf_unit_test(URDFModelImport)
+add_modelio_urdf_unit_test(URDFGenericSensorImport)
