add option to run tests under valgrind

--- a/model_io/urdf/tests/CMakeLists.txt
+++ b/model_io/urdf/tests/CMakeLists.txt
@@ -6,6 +6,11 @@ macro(add_modelio_urdf_unit_test classname)
     target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR})
     target_link_libraries(${testbinary} idyntree-modelio-urdf)
     add_test(NAME ${testname} COMMAND ${testbinary})
+
+    if(IDYNTREE_RUN_VALGRIND_TESTS)
+        add_test(NAME memcheck_${testname} COMMAND ${MEMCHECK_COMMAND_COMPLETE} ./${testbinary})
+    endif()
+
 endmacro()
 
 add_modelio_urdf_unit_test(URDFModelImport)
