--- a/tests/kdl_consistency/CMakeLists.txt
+++ b/tests/kdl_consistency/CMakeLists.txt
@@ -6,6 +6,10 @@ macro(add_kdl_consistency_test testName)
     target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR})
     target_link_libraries(${testbinary} idyntree-modelio-urdf idyntree-core idyntree-core-exp idyntree-model)
     add_test(NAME ${testname} COMMAND ${testbinary})
+
+    if(IDYNTREE_RUN_VALGRIND_TESTS)
+        add_test(NAME memcheck_${testname} COMMAND ${MEMCHECK_COMMAND_COMPLETE} ./${testbinary})
+    endif()
 endmacro()
 
 add_kdl_consistency_test(Geometry)
