--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -6,7 +6,11 @@ if(IDYNTREE_USES_KDL)
     # Integration tests of old kdl_codyco project
     add_subdirectory(kdl_tests)
 
+    # Benchmarks against old RNEA & CRBA based on kdl
+    add_subdirectory(benchmark)
+
     # Add a subdirectory of all the consistency tests between the old
     # "kdl_codyco" implementations and the new native iDynTree implementations
     add_subdirectory(kdl_consistency)
+
 endif()
