[cmake] fiix linking on os x

--- a/src/model_io/symoro/CMakeLists.txt
+++ b/src/model_io/symoro/CMakeLists.txt
@@ -35,7 +35,7 @@ target_include_directories(${libraryname} PUBLIC "$<BUILD_INTERFACE:${CMAKE_SOUR
                                                  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}>"
                                                  ${orocos_kdl_INCLUDE_DIRS})
 
-target_link_libraries(${libraryname} idyntree-core expression-parser ${orocos_kdl_LIBRARIES})
+target_link_libraries(${libraryname} idyntree-kdl expression-parser ${orocos_kdl_LIBRARIES})
 
 set_property(TARGET ${libraryname} PROPERTY PUBLIC_HEADER ${IDYNTREE_MODELIO_SYMORO_HEADERS})
 
