Added first model tranformer function: removeFakeLinks
This function is used in the URDF parser to remove
"fake links" and transform them in "frames"

Added some frames as "fake links" to the oneLink.urdf
test model , to test the behaviour of this new function in
URDFModelImportUnitTest .

--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -14,6 +14,7 @@ set(IDYNTREE_MODEL_HEADERS include/iDynTree/Model/FixedJoint.h
                            include/iDynTree/Model/Link.h
                            include/iDynTree/Model/LinkState.h
                            include/iDynTree/Model/Model.h
+                           include/iDynTree/Model/ModelTransformers.h
                            include/iDynTree/Model/MovableJointImpl.h
                            include/iDynTree/Model/RevoluteJoint.h
                            include/iDynTree/Model/Traversal.h)
@@ -30,6 +31,7 @@ set(IDYNTREE_MODEL_SOURCES src/FixedJoint.cpp
                            src/LinkState.cpp
                            src/JointState.cpp
                            src/Model.cpp
+                           src/ModelTransformers.cpp
                            src/ModelInterfaceDestructors.cpp
                            src/RevoluteJoint.cpp
                            src/Traversal.cpp)
