[cmake] Include a TinyXML internal copy for compiling without TinyXML
It is possible to compile with the internal copy of TinyXML only
if IDYNTREE_USES_KDL is off.

--- a/src/model_io/CMakeLists.txt
+++ b/src/model_io/CMakeLists.txt
@@ -1,13 +1,13 @@
 add_subdirectory(urdf)
 
-if(IDYNTREE_ENABLE_SYMORO_PAR)
+if(IDYNTREE_ENABLE_SYMORO_PAR AND IDYNTREE_USES_KDL)
     add_subdirectory(symoro)
 endif()
 
-if(IDYNTREE_USES_ICUB_MAIN)
+if(IDYNTREE_USES_ICUB_MAIN AND IDYNTREE_USES_KDL)
     add_subdirectory(iKin)
 endif()
 
-if(IDYNTREE_COMPILE_TESTS)
+if(IDYNTREE_COMPILE_TESTS AND IDYNTREE_USES_KDL)
     add_subdirectory(tests)
 endif()
