--- a/src/icub/CMakeLists.txt
+++ b/src/icub/CMakeLists.txt
@@ -17,12 +17,7 @@ SET(iDynTree_ICUB_header
 SOURCE_GROUP("Source Files" FILES ${iDynTree_ICUB_source})
 SOURCE_GROUP("Header Files" FILES ${iDynTree_ICUB_header})
 
-# share headers with all iDynTree targes
-set_property(GLOBAL APPEND PROPERTY IDYNTREE_TREE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
-get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
-
-include_directories(${IDYNTREE_TREE_INCLUDE_DIRS})
-include_directories(${orocos_kdl_INCLUDE_DIRS})
+include_directories()
 
 include(AddInstallRPATHSupport)
 add_install_rpath_support(BIN_DIRS "${CMAKE_INSTALL_PREFIX}/bin"
@@ -37,13 +32,14 @@ set_target_properties(idyntree-icub PROPERTIES VERSION ${${VARS_PREFIX}_VERSION}
                                            SOVERSION ${${VARS_PREFIX}_VERSION}
                                            PUBLIC_HEADER "${iDynTree_ICUB_header}")
 
-target_include_directories(idyntree-icub PUBLIC "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>"
+target_include_directories(idyntree-icub PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
                                                 "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}>"
-                                            ${skinDynLib_INCLUDE_DIRS}
-                                            ${iDyn_INCLUDE_DIRS}
-                                            ${GSL_INCLUDE_DIRS}
-                                            ${YARP_INCLUDE_DIRS}
-                                            ${EIGEN3_INCLUDE_DIR})
+                                                ${skinDynLib_INCLUDE_DIRS}
+                                                ${iDyn_INCLUDE_DIRS}
+                                                ${GSL_INCLUDE_DIRS}
+                                                ${YARP_INCLUDE_DIRS}
+                                                ${EIGEN3_INCLUDE_DIR}
+                                                ${orocos_kdl_INCLUDE_DIRS})
 
 
 target_link_libraries(idyntree-icub LINK_PUBLIC  skinDynLib iKin iDyn
