--- a/src/icub/tests/CMakeLists.txt
+++ b/src/icub/tests/CMakeLists.txt
@@ -3,9 +3,9 @@ include_directories(${CMAKE_SOURCE_DIR}/include
                           ${orocos_kdl_INCLUDE_DIRS}
                           ${iDynTree_INCLUDE_DIRS}
                           ${YARP_INCLUDE_DIRS}
-                          ${kdl_codyco_INCLUDE_DIRS}
                           ${ICUB_INCLUDE_DIRS})
 
+get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
 macro(add_icub_test testName)
     set(testsrc ${testName}Test.cpp)
     set(testbinary ${testName}Test)
