--- a/src/regressors/CMakeLists.txt
+++ b/src/regressors/CMakeLists.txt
@@ -24,21 +24,14 @@ set(IDYNTREE_REGRESSOR_SOURCES_EXP DynamicsRegressorParameters.cpp)
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_REGRESSORS_SOURCES} ${IDYNTREE_REGRESSORS_SOURCES_EXP})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_REGRESSORS_HEADERS} ${IDYNTREE_REGRESSORS_HEADERS_EXP})
 
-#include other iDynTree headers as system
-get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
-
-include_directories(${IDYNTREE_TREE_INCLUDE_DIRS})
-
-# share headers with all iDynTree targes
-set_property(GLOBAL APPEND PROPERTY IDYNTREE_TREE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
-include_directories(SYSTEM ${orocos_kdl_INCLUDE_DIRS}
-                           ${EIGEN3_INCLUDE_DIR})
-
 add_library(idyntree-regressors ${IDYNTREE_REGRESSORS_SOURCES}     ${IDYNTREE_REGRESSORS_HEADERS}
                                 ${IDYNTREE_REGRESSORS_SOURCES_EXP} ${IDYNTREE_REGRESSORS_HEADERS_EXP})
 
-target_include_directories(idyntree-regressors PUBLIC "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>"
+target_include_directories(idyntree-regressors PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
                                                       "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}>")
+target_include_directories(idyntree-regressors SYSTEM PUBLIC ${orocos_kdl_INCLUDE_DIRS}
+                                                              ${EIGEN3_INCLUDE_DIR})
+
 
 target_link_libraries(idyntree-regressors idyntree-core idyntree-sensors idyntree-modelio-urdf ${orocos_kdl_LIBRARIES} ${TinyXML_LIBRARIES} )
 
