[bindigs][cmake] Fix copy_matlab_tests_in_build slow execution
Fix https://github.com/robotology/idyntree/issues/91

--- a/bindings/matlab/tests/CMakeLists.txt
+++ b/bindings/matlab/tests/CMakeLists.txt
@@ -2,7 +2,7 @@
 add_custom_target(copy_matlab_tests_in_build ALL)
 add_custom_command(TARGET copy_matlab_tests_in_build PRE_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy_directory
-                   ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
+                   ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_command(TARGET copy_matlab_tests_in_build PRE_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy_directory
                    ${CMAKE_SOURCE_DIR}/../+iDynTree ${CMAKE_BINARY_DIR}/+iDynTree)
