--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - sudo add-apt-repository -y ppa:kalakris/cmake
   - sudo add-apt-repository -y ppa:kubuntu-ppa/backports
   - sudo apt-get update
-  - sudo apt-get install -qq libeigen3-dev libboost-system-dev libboost-thread-dev libboost-test-dev valgrind liblua5.1-0-dev lua5.1 libpython-dev python-dev
+  - sudo apt-get install -qq libeigen3-dev libboost-system-dev libboost-thread-dev libboost-test-dev valgrind liblua5.1-0-dev lua5.1 python-dev
   - sudo apt-get --force-yes install icub-common
   - sudo apt-get install cmake
 
