--- a/src/model_io/urdf/tests/CMakeLists.txt
+++ b/src/model_io/urdf/tests/CMakeLists.txt
@@ -15,3 +15,4 @@ endmacro()
 
 add_modelio_urdf_unit_test(URDFModelImport)
 add_modelio_urdf_unit_test(URDFGenericSensorImport)
+add_modelio_urdf_unit_test(PredictSensorsMeasurement)
