--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -705,7 +705,9 @@ EXCLUDE_SYMLINKS       = NO
 
 EXCLUDE_PATTERNS       = */bindings/* \
                          */tests/*    \
-                         */examples/*
+                         */examples/* \ 
+                         */extern/* \ 
+                         */external/* 
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names
 # (namespaces, classes, functions, etc.) that should be excluded from the
