[cmake][icub] drop soversion specified just for the icub library

--- a/src/icub/CMakeLists.txt
+++ b/src/icub/CMakeLists.txt
@@ -28,9 +28,7 @@ add_install_rpath_support(BIN_DIRS "${CMAKE_INSTALL_PREFIX}/bin"
 
 add_library(idyntree-icub ${iDynTree_ICUB_source} ${iDynTree_ICUB_header})
 
-set_target_properties(idyntree-icub PROPERTIES VERSION ${${VARS_PREFIX}_VERSION}
-                                           SOVERSION ${${VARS_PREFIX}_VERSION}
-                                           PUBLIC_HEADER "${iDynTree_ICUB_header}")
+set_target_properties(idyntree-icub PROPERTIES PUBLIC_HEADER "${iDynTree_ICUB_header}")
 
 target_include_directories(idyntree-icub PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
                                                 "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}>"
